# LLM-as-Judge

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  app.py  config.py  judge.py  prompts.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: sample_batch.csv
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
src/llm_judge/: __init__.py  batch.py  cli.py  config.py  criteria.py  exceptions.py  judge.py  logging_config.py  models.py  parsing.py  prompts.py
src/llm_judge/providers/: __init__.py  base.py  groq_provider.py
tests/: conftest.py  test_batch.py  test_cli.py  test_config.py  test_criteria.py  test_judge.py  test_models.py  test_parsing.py  test_prompts.py  test_providers.py
